--- a/TODO
+++ b/TODO
@@ -5,3 +5,4 @@
 [ ] Check for other languages
 [ ] Write short HOWTO for those who want to use it for continuous
    integration of their novels.
+[ ] Write a real README file.
