--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@
 
 [ ] Eliminate `File::Slurp` dependencies to get done with CPAN bug
 [x] Add single-function interface
-[ ] Check for other languages
+[ ] Check for other languages (non-English, non-Spanish)
 [ ] Write short HOWTO for those who want to use it for continuous
    integration of their novels.
 [ ] Write a real README file.
