--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 2014-08-13  JJ Merelo  <jmerelo@amy>
 
+	* t/02.just_check.t: Added this since it's got an independent done_testing
+
 	* lib/Test/Text.pm (just_check): Finished tests and changed encoding for test script.
 
 2014-08-12  JJ Merelo  <jmerelo@amy>
