--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+2017-07-28  Juan J. merelo  <jmerelo@penny>
+
+	* lib/Test/Text.pm: Shows correctly (apparently) utf-8 encoded characters.
+
 2016-04-20  Juan J. merelo  <jmerelo@penny>
 
 	* lib/Test/Text.pm: Strips code from markdown to avoid getting
