--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+2020-09-21  jmerelo  <jmerelo@princess-carolyn>
+
+	* lib/Test/Text.pm: Changes again so that it can be called with or without calling done_testing.
+
 2020-09-21  jmerelo  <jmerelo@jjmerelo-System-Product-Name>
 
 	* lib/Test/Text.pm: New version eliminates done_testing from the check; this will break a few things, I'm afraid... 
