--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+2022-07-07  jmerelo  <jmerelo@princess-carolyn>
+
+	* lib/Test/Text.pm: Start to work with more extensions
+
 2020-10-10  jmerelo  <jmerelo@princess-carolyn>
 
 	* lib/Test/Text.pm: 0.6.4 includes multi-line markdown links.
