--- a/text/en/text.Rmd
+++ b/text/en/text.Rmd
@@ -10,3 +10,8 @@ Here is a chunk
 library(ggplot2)
 ```
 
+It includes also some `code foo bar` here and there.
+
+```text
+        And some more code quux
+```
